fix front spacing

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -786,7 +786,7 @@ body.td-documentation #announcement + .header-hero {
 
 body.td-documentation {
   font-size: 16px;
-  line-height: 1.7;
+  line-height: 1.8;
 
   .td-main {
     padding-top: 62px;
@@ -910,7 +910,7 @@ figure.release-logo {
 
 .td-content {
   font-size: 16px;
-  line-height: 1.7;
+  line-height: 1.0;
 }
 
 .td-content .row,
@@ -987,7 +987,7 @@ body.td-documentation .td-main > .row > main .td-content .card {
 .td-content {
   p {
     font-size: 15px;
-    line-height: 1.2;
+    line-height: 1.1;
     margin-bottom: 1.25rem;
   }
 
@@ -1022,13 +1022,13 @@ body.td-documentation .td-main > .row > main .td-content .card {
 
   ul, ol {
     font-size: 14px;
-    line-height: 1.0;
+    line-height: 2;
     margin-bottom: 1.25rem;
     padding-left: 2rem;
 
     li {
-      margin-bottom: 0.5rem;
-      line-height: 1.0;
+      margin-bottom: 0.7rem;
+      line-height: 1.3;
     }
   }
 
@@ -1181,7 +1181,7 @@ body.td-documentation .td-main > .row > main .td-content .card {
   ul:has(+ pre) {
     padding-left: 0;
     margin-left: 0;
-    height: 0.8rem
+    height: 1.2rem
   }
 
   p + .highlight,
